gallery margin corrected, width on mobile screens were adjusted, instead of 10px on each side of the cards is now 16px to the figma design

--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -9,7 +9,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 40px 20px;
   justify-content: center;
-  margin: 0 80px;
+  margin: 0 80px 0 80px;
   padding-bottom: 40px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
   width: calc(100% - 160px);
@@ -41,11 +41,23 @@
 .gallery__name {
   font-size: 1.25rem;
   font-weight: 500;
+  line-height: 120%;
   color: rgba(33, 33, 33, 1);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 80%;
+}
+@media screen and (max-width: 768px) {
+  .gallery__name {
+    line-height: 110%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .gallery__name {
+    line-height: 100%;
+  }
 }
 
 .gallery__icon {
@@ -67,7 +79,8 @@
 
 @media screen and (max-width: 1100px) {
   .gallery__grid {
-    margin: 0 40px 0 0;
+    margin: 0 40px 0 40px;
+    padding-bottom: 35px;
     width: calc(100% - 80px);
   }
 }
@@ -76,7 +89,8 @@
   .gallery__grid {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    margin: 0 20px 0 0;
+    margin: 0 20px 0 20px;
+    padding-bottom: 30px;
     width: calc(100% - 40px);
   }
 }
@@ -84,7 +98,8 @@
 @media screen and (max-width: 480px) {
   .gallery__grid {
     grid-template-columns: 1fr;
-    margin: 0 10px 0 0;
-    width: calc(100% - 20px);
+    margin: 0 16px 0 16px;
+    padding-bottom: 20px;
+    width: calc(100% - 32px);
   }
 }
